Add java simple mzbWriter (from mzdb4s)