@@ -1,21 +1,15 @@
 package fr.profi.mzknife.recalibration;
 
 import com.almworks.sqlite4java.SQLiteException;
-import com.github.mzdb4s.db.model.*;
-import com.github.mzdb4s.db.model.params.*;
-import com.github.mzdb4s.db.model.params.param.CVParam;
-import com.github.mzdb4s.db.model.params.param.UserParam;
-import com.github.mzdb4s.io.writer.MzDbWriter;
-import com.github.mzdb4s.msdata.*;
-import com.github.sqlite4s.SQLiteFactory$;
+import fr.profi.mzdb.BBSizes;
 import fr.profi.mzdb.MzDbReader;
+import fr.profi.mzdb.db.model.*;
+import fr.profi.mzdb.db.model.params.ParamTree;
+import fr.profi.mzdb.db.model.params.param.UserParam;
+import fr.profi.mzdb.io.writer.MzDBWriter;
+import fr.profi.mzdb.model.*;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import scala.Enumeration;
-import scala.None$;
-import scala.Some;
-import scala.collection.JavaConverters;
-import scala.collection.mutable.WrappedArray;
 
 import java.io.File;
 import java.util.ArrayList;
@@ -29,7 +23,6 @@ import java.util.List;
 public class MzdbRecalibrator {
 
   private final static Logger LOG = LoggerFactory.getLogger(MzdbRecalibrator.class);
-  private final static scala.Option NoneOption = None$.MODULE$;
 
   private final MzDbReader m_srcReader;
   private final File m_dstFile;
@@ -49,56 +42,17 @@ public class MzdbRecalibrator {
     ParamTree paramTree = new ParamTree();
 
     List<UserParam> userParams = new ArrayList<>();
-    for (fr.profi.mzdb.db.model.params.param.UserParam srcUserParam :  m_srcReader.getMzDbHeader().getUserParams()) {
-      userParams.add(new UserParam(srcUserParam.getName(), srcUserParam.getValue(), srcUserParam.getType()));
+    for (UserParam srcUserParam :  m_srcReader.getMzDbHeader().getUserParams()) {
+      userParams.add(new UserParam(null, null, srcUserParam.getName(), srcUserParam.getValue(), srcUserParam.getType()));
     }
-    paramTree.setUserParams(JavaConverters.asScalaIteratorConverter(userParams.iterator()).asScala().toSeq());
-    int currentTime = new Long(System.currentTimeMillis()).intValue();
-    MzDbHeader mzdbHeader = new MzDbHeader(m_srcReader.getMzDbHeader().getVersion(), currentTime, paramTree);
+    paramTree.setUserParams(userParams);
+    int currentTime = Long.valueOf(System.currentTimeMillis()).intValue();
+    MzDbHeader mzdbHeader = new MzDbHeader(m_srcReader.getMzDbHeader().getVersion(), currentTime, paramTree, null);
 
-    List<DataEncoding> dataEncodings = new ArrayList<>();
-    for (int i = 1; i <= m_srcReader.getDataEncodingsCount(); i++) {
-      fr.profi.mzdb.model.DataEncoding srcEncoding = m_srcReader.getDataEncoding(i);
-      Enumeration.Value dstPeakEncoding = toDataEncoding(srcEncoding);
-      switch (srcEncoding.getMode()) {
-        case FITTED:
-          m_fittedDataEncoding = new DataEncoding(-1, DataMode.FITTED(), dstPeakEncoding, srcEncoding.getCompression(), srcEncoding.getByteOrder());
-          dataEncodings.add(m_fittedDataEncoding);
-          break;
-        case PROFILE:
-          m_profileDataEncoding = new DataEncoding(-1, DataMode.PROFILE(), dstPeakEncoding, srcEncoding.getCompression(), srcEncoding.getByteOrder());
-          dataEncodings.add(m_profileDataEncoding);
-          break;
-        case CENTROID:
-          m_centroidDataEncoding = new DataEncoding(-1, DataMode.CENTROID(), dstPeakEncoding, srcEncoding.getCompression(), srcEncoding.getByteOrder());
-          dataEncodings.add(m_centroidDataEncoding);
-      }
-    }
-
-
-    List<InstrumentConfiguration> instrumentConfigurations = new ArrayList<>();
-
-    // creates a Fake instrument
-
-    List<Component> compos = new ArrayList<>();
-    SourceComponent srcCompo = new SourceComponent(1);
-    //Hard CODED for exemple !
-    List<CVParam> params = new ArrayList<>();
-    //<cvParam cvRef="MS" accession="MS:1000398" name="nanoelectrospray" value=""/>
-    params.add(new CVParam("MS:1000398", "nanoelectrospray", "", "MS", NoneOption, NoneOption, NoneOption));
-    //<cvParam cvRef="MS" accession="MS:1000485" name="nanospray inlet" value=""/>
-    params.add(new CVParam("MS:1000485", "nanospray inlet", "", "MS", NoneOption, NoneOption, NoneOption));
-    srcCompo.setCVParams(JavaConverters.asScalaIteratorConverter(params.iterator()).asScala().toSeq());
-    compos.add(srcCompo);
-    //VDS TODO  Add Analyzer and Detector component
-    ComponentList compList = new ComponentList( JavaConverters.asScalaIteratorConverter(compos.iterator()).asScala().toSeq());
-
-    InstrumentConfiguration instrumentConfiguration = new InstrumentConfiguration(-1, "FakeMS", 1, new ParamTree(), compList);
-    instrumentConfigurations.add(instrumentConfiguration);
+    List<DataEncoding> dataEncodings = new ArrayList<>(Arrays.asList(m_srcReader.getDataEncodingReader().getDataEncodings()));
+    List<InstrumentConfiguration> instrumentConfigurations = m_srcReader.getInstrumentConfigurations();
 
     //TODO mzDBReader fails to read instrumentConfiguration in existing mzdb files
-
-
 //    for (fr.profi.mzdb.db.model.InstrumentConfiguration srcConfig : m_srcReader.getInstrumentConfigurations()) {
 //      List<Component> components = new ArrayList<>();
 //      if (srcConfig.getComponentList() != null) {
@@ -129,188 +83,83 @@ public class MzdbRecalibrator {
 //    }
 
 
-    // Processing methods ... except that there is no api in mzdb-access to read Processing methods.
+    // Processing methods ... except that there is no api in mzdb-access to read Processing methods. TODO !!
     List<ProcessingMethod> processingMethods = new ArrayList<>();
-  int processingMethodsNumber = 0;
-    List<Software> softwares = new ArrayList<>();
-
-    for (fr.profi.mzdb.db.model.Software srcSoftware : m_srcReader.getSoftwareList()) {
-      params = new ArrayList<>();
-      for (fr.profi.mzdb.db.model.params.param.CVParam srcParam : srcSoftware.getCVParams()) {
-        params.add(toCVParam(srcParam));
-      }
-      paramTree = new ParamTree();
-      paramTree.setCVParams(JavaConverters.asScalaIteratorConverter(params.iterator()).asScala().toSeq());
-      Software software = new Software((int) srcSoftware.getId(), srcSoftware.getName(), srcSoftware.getVersion(), paramTree);
-      softwares.add(software);
-
-      ProcessingMethod pm = new ProcessingMethod((int)srcSoftware.getId(), processingMethodsNumber++, "fake processing method - to be done", scala.Option.apply(new ParamTree()), software.getId());
+    int processingMethodsNumber = 0;
+    int processingMethodsid = 1;
+    List<Software> softwares =  m_srcReader.getSoftwareList();
+    for (Software srcSoftware : softwares) {
+      ProcessingMethod pm = new ProcessingMethod(processingMethodsid++, null, processingMethodsNumber++, "fake processing method - to be done", (int) srcSoftware.getId());
       processingMethods.add(pm);
-
     }
 
-    List<Run> runs = new ArrayList<>();
-    for( fr.profi.mzdb.db.model.Run srcRun : m_srcReader.getRuns()) {
-      Run r = new Run((int)srcRun.getId(), srcRun.getName() , srcRun.getStartTimestamp());
-      runs.add(r);
-    }
-
-    List<Sample> samples = new ArrayList<>();
-    for (fr.profi.mzdb.db.model.Sample srcSample: m_srcReader.getSamples()) {
-      paramTree = new ParamTree();
-      paramTree.setCVParams(JavaConverters.asScalaIteratorConverter(toCVParams(srcSample).iterator()).asScala().toSeq());
-      Sample sample = new Sample((int)srcSample.getId(), srcSample.getName(),paramTree);
-      samples.add(sample);
-    }
-
-
-    List<SourceFile> sourceFiles = new ArrayList<>();
-    for (fr.profi.mzdb.db.model.SourceFile srcSourceFile: m_srcReader.getSourceFiles()) {
-      paramTree = new ParamTree();
-      paramTree.setCVParams(JavaConverters.asScalaIteratorConverter(toCVParams(srcSourceFile).iterator()).asScala().toSeq());
-      SourceFile sourceFile = new SourceFile((int)srcSourceFile.getId(), srcSourceFile.getName(), srcSourceFile.getLocation(),paramTree);
-      sourceFiles.add(sourceFile);
-
-    }
+    List<Run> runs = m_srcReader.getRuns();
+    List<Sample> samples = m_srcReader.getSamples();
+    List<SourceFile> sourceFiles = m_srcReader.getSourceFiles();
 
     LOG.info("Created MzDbMetaData.");
-    return new MzDbMetaData(
-            mzdbHeader,
-            JavaConverters.asScalaIteratorConverter(dataEncodings.iterator()).asScala().toSeq(),
-            new CommonInstrumentParams(-1,new ParamTree()),
-            JavaConverters.asScalaIteratorConverter(instrumentConfigurations.iterator()).asScala().toSeq(),
-            JavaConverters.asScalaIteratorConverter(processingMethods.iterator()).asScala().toSeq(),
-            JavaConverters.asScalaIteratorConverter(runs.iterator()).asScala().toSeq(),
-            JavaConverters.asScalaIteratorConverter(samples.iterator()).asScala().toSeq(),
-            JavaConverters.asScalaIteratorConverter(softwares.iterator()).asScala().toSeq(),
-            JavaConverters.asScalaIteratorConverter(sourceFiles.iterator()).asScala().toSeq());
+    MzDbMetaData mzMetaData = new MzDbMetaData();
+    mzMetaData.setMzdbHeader(mzdbHeader);
+    mzMetaData.setDataEncodings(dataEncodings);
+    mzMetaData.setCommonInstrumentParams(new CommonInstrumentParams(-1,new ParamTree()));
+    mzMetaData.setInstrumentConfigurations(instrumentConfigurations);
+    mzMetaData.setProcessingMethods(processingMethods);
+    mzMetaData.setRuns(runs);
+    mzMetaData.setSamples(samples);
+    mzMetaData.setSourceFiles(sourceFiles);
+    mzMetaData.setSoftwares(softwares);
+    return mzMetaData;
   }
 
-  private Enumeration.Value toDataEncoding(fr.profi.mzdb.model.DataEncoding srcEncoding) {
-    Enumeration.Value dstPeakEncoding = null;
-    switch(srcEncoding.getPeakEncoding()) {
-      case HIGH_RES_PEAK:
-        dstPeakEncoding = PeakEncoding.HIGH_RES_PEAK();
-        break;
-      case LOW_RES_PEAK:
-        dstPeakEncoding = PeakEncoding.LOW_RES_PEAK();
-        break;
-      case NO_LOSS_PEAK: dstPeakEncoding = PeakEncoding.NO_LOSS_PEAK();
-    }
-    return dstPeakEncoding;
-  }
 
-  private List<CVParam> toCVParams(fr.profi.mzdb.db.model.AbstractTableModel srcModel) {
-    List<CVParam> params = new ArrayList<>();
-    for (fr.profi.mzdb.db.model.params.param.CVParam srcParam : srcModel.getCVParams()) {
-      params.add(toCVParam(srcParam));
-    }
-    return params;
-  }
-
-  private CVParam toCVParam(fr.profi.mzdb.db.model.params.param.CVParam srcParam) {
-    scala.Option opUnitCVRef = (srcParam.getUnitCvRef() == null) ? None$.MODULE$ : new Some<>(srcParam.getUnitCvRef());
-    scala.Option opUnitAcc = (srcParam.getUnitAccession() == null) ? None$.MODULE$ : new Some<>(srcParam.getUnitAccession());
-    scala.Option opUnitName = (srcParam.getUnitName() == null) ? None$.MODULE$ : new Some<>(srcParam.getUnitName());
-    CVParam dstParam = new CVParam(srcParam.getAccession(), srcParam.getName(), srcParam.getValue(), srcParam.getCvRef(), opUnitCVRef, opUnitAcc, opUnitName);
-
-    return dstParam;
-  }
 
   public void recalibrate(Long firstScan, Long lastScan, double deltaMass) {
-    MzDbWriter writer = null;
+    MzDBWriter writer = null;
 
     try {
 
-
-      DefaultBBSizes$ bbsize = DefaultBBSizes$.MODULE$;
-      SQLiteFactory$ sf = SQLiteFactory$.MODULE$;
+      BBSizes defaultBBsize = new BBSizes(5,10000,15,0);
 
       MzDbMetaData mzDbMetaData = createMzDbMetaData();
-      fr.profi.mzdb.model.AcquisitionMode srcAcqMode = m_srcReader.getAcquisitionMode();
+      AcquisitionMode srcAcqMode = m_srcReader.getAcquisitionMode();
       boolean isDIA = (srcAcqMode != null && srcAcqMode.equals(fr.profi.mzdb.model.AcquisitionMode.SWATH));
-      writer = new MzDbWriter(m_dstFile, mzDbMetaData, bbsize.apply(), isDIA, sf);
-      writer.open();
+      writer = new MzDBWriter(m_dstFile, mzDbMetaData, defaultBBsize, isDIA);
+      writer.initialize();
 
-      fr.profi.mzdb.model.SpectrumHeader[] headers = m_srcReader.getSpectrumHeaders();
-      Arrays.sort(headers, Comparator.comparingLong(fr.profi.mzdb.model.SpectrumHeader::getSpectrumId));
+      SpectrumHeader[] headers = m_srcReader.getSpectrumHeaders();
+      Arrays.sort(headers, Comparator.comparingLong(SpectrumHeader::getSpectrumId));
       int recalibratedScanCount = 0;
 
-      for (fr.profi.mzdb.model.SpectrumHeader srcSpectrumHeader: headers) {
+      for (SpectrumHeader srcSpectrumHeader: headers) {
 
-        long start = System.currentTimeMillis();
+//        long start = System.currentTimeMillis();
 
-        fr.profi.mzdb.model.Spectrum srcSpectrum = m_srcReader.getSpectrum(srcSpectrumHeader.getSpectrumId());
-        fr.profi.mzdb.model.SpectrumData srcSpectrumData = srcSpectrum.getData();
-
-        Precursor precursor = null;
-        fr.profi.mzdb.db.model.params.Precursor srcPrecursor = srcSpectrumHeader.getPrecursor();
-
-        if (srcPrecursor != null){
-          precursor = new Precursor();
-          precursor.spectrumRef_$eq(srcPrecursor.getSpectrumRef());
+        Spectrum srcSpectrum = m_srcReader.getSpectrum(srcSpectrumHeader.getSpectrumId());
+        SpectrumData srcSpectrumData = srcSpectrum.getData();
+        double[] mzValues = null;
+        if ((srcSpectrumHeader.getSpectrumId() >= firstScan) && (srcSpectrumHeader.getSpectrumId() <= lastScan)) {
+          recalibratedScanCount++;
+          mzValues = RecalibrateUtil.recalibrateMasses(srcSpectrumData.getMzList(), deltaMass);
+          LOG.info(" Recalibrate spectrum {] at RT {} ", srcSpectrumHeader.getId(), srcSpectrumHeader.getTime());
+        } else {
+          mzValues = srcSpectrumData.getMzList();
         }
+        SpectrumData spData = new SpectrumData(mzValues,srcSpectrumData.getIntensityList(), srcSpectrumData.getLeftHwhmList(), srcSpectrumData.getRightHwhmList());
 
-          SpectrumHeader spH = new SpectrumHeader(
-                  srcSpectrumHeader.getSpectrumId(),
-                  (int)srcSpectrumHeader.getId(),
-                  "title", // TODO : read Spectrum.title from the mzdb file
-                  srcSpectrumHeader.getCycle(),
-                  srcSpectrumHeader.getTime(),
-                  srcSpectrumHeader.getMsLevel(),
-                  NoneOption,
-                  srcSpectrumHeader.getPeaksCount(),
-                  false,
-                  srcSpectrumHeader.getTIC(),
-                  srcSpectrumHeader.getBasePeakMz(),
-                  srcSpectrumHeader.getBasePeakIntensity(),
-                  new Some(srcSpectrumHeader.getPrecursorMz()),
-                  new Some(srcSpectrumHeader.getPrecursorCharge()),
-                  (int)srcSpectrumHeader.getSpectrumId(),
-                  (ScanList) null,
-                  precursor,
-                  NoneOption);
+        Spectrum mzdb4sSp = new Spectrum(srcSpectrumHeader, spData);
+        SpectrumMetaData spectrumMetaData = new SpectrumMetaData(
+                srcSpectrumHeader.getSpectrumId(),
+                srcSpectrumHeader.getParamTreeAsString(m_srcReader.getConnection()),
+                srcSpectrumHeader.getScanListAsString(m_srcReader.getConnection()),
+                srcSpectrumHeader.getPrecursorListAsString(m_srcReader.getConnection()));
 
-          double[] mzValues = null;
-          if ((srcSpectrumHeader.getSpectrumId() >= firstScan) && (srcSpectrumHeader.getSpectrumId() <= lastScan)) {
-            recalibratedScanCount++;
-            mzValues = RecalibrateUtil.recalibrateMasses(srcSpectrumData.getMzList(), deltaMass);
-            LOG.info(" Recalibrate spectrum {] at RT {} ", srcSpectrumHeader.getId(), srcSpectrumHeader.getTime());
-          } else {
-            mzValues = srcSpectrumData.getMzList();
-          }
-          WrappedArray<Object> mz = WrappedArray.make(mzValues);
-          WrappedArray<Object> intensities = WrappedArray.make(srcSpectrumData.getIntensityList());
-          WrappedArray<Object> leftHwhm = WrappedArray.make(srcSpectrumData.getLeftHwhmList());
-          WrappedArray<Object> rightHwhm = WrappedArray.make(srcSpectrumData.getRightHwhmList());
-          SpectrumData spData = new SpectrumData(mz,intensities, leftHwhm, rightHwhm);
+        writer.insertSpectrum(mzdb4sSp, spectrumMetaData, m_srcReader.getSpectrumDataEncoding(srcSpectrumHeader.getSpectrumId()));
 
-          Spectrum mzdb4sSp = new Spectrum(spH, spData);
-          SpectrumXmlMetaData spectrumMetaData = new SpectrumXmlMetaData(
-                  srcSpectrumHeader.getSpectrumId(),
-                  srcSpectrumHeader.getParamTreeAsString(m_srcReader.getConnection()),
-                  srcSpectrumHeader.getScanListAsString(m_srcReader.getConnection()),
-                  new Some(srcSpectrumHeader.getPrecursorListAsString(m_srcReader.getConnection())),
-                  scala.Option.empty());
-
-          DataEncoding spectrumEncoding = null;
-          switch(m_srcReader.getSpectrumDataEncoding(srcSpectrumHeader.getSpectrumId()).getMode()) {
-            case FITTED:
-              spectrumEncoding = m_fittedDataEncoding;
-              break;
-            case CENTROID:
-              spectrumEncoding = m_centroidDataEncoding;
-              break;
-            case PROFILE:
-              spectrumEncoding = m_profileDataEncoding;
-        }
-          writer.insertSpectrum(mzdb4sSp, spectrumMetaData, spectrumEncoding);
-
-        if (srcSpectrumHeader.getSpectrumId() % 1000 == 0 || srcSpectrumHeader.getSpectrumId() == m_srcReader.getSpectraCount()) {
+        if (srcSpectrumHeader.getSpectrumId() % 5000 == 0 || srcSpectrumHeader.getSpectrumId() == m_srcReader.getSpectraCount()) {
           LOG.info("Write {} spectra over {} ({} already recalibrated)", srcSpectrumHeader.getSpectrumId(), m_srcReader.getSpectraCount(), recalibratedScanCount);
         }
-
       }//End go through all spectra
+      LOG.info("{} spectrum recalibrated", recalibratedScanCount);
     } catch (Exception e) {
       LOG.error("Exception in Spectrum iterator ", e);
       e.printStackTrace();
@@ -318,7 +167,7 @@ public class MzdbRecalibrator {
       LOG.error("Throwable in Spectrum iterator ", t);
       t.printStackTrace();
     } finally {
-      LOG.debug("Finally  " + writer.loggerName() + " close ");
+      LOG.debug("Finally   writer close ");
       writer.close();
     }
 
